# dev-pro-agents

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  run_tests.py  test_phase3.py  test_phase3_3.py  test_phase4.py  test_phase4_output.txt  test_phase5.py  test_phase7.py
docs/planning/: 01-task-modeling.md  02-sqlmodel-schema.md  03-config-settings.md  04-pydantic-adv-features.md  05-code-audit-library-first.md  06-modularization-layout.md  07-langgraph-orchestration.md  08-schema-integration.md  09-library-first-cleanup.md  10-final-library-first-research-findings.md  11-master-roadmap.md
src/: __init__.py  cli.py  config.py  database.py  supervisor.py  supervisor_executor.py  task_manager.py
src/agents/: __init__.py  coding_agent.py  documentation_agent.py  research_agent.py  testing_agent.py
src/config/: agents.yaml  orchestrator.yaml
src/core/: __init__.py  agent_protocol.py  agent_registry.py  orchestrator.py
src/database/: implementation_tracker.db
src/integrations/: README.md  __init__.py  exa_client.py  firecrawl_client.py
src/repositories/: __init__.py  base.py
src/schemas/: __init__.py  database.py  transformations.py  unified_models.py
src/services/: __init__.py
src/utils/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_unified_models.py
tests/e2e/: __init__.py  test_batch_execution.py  test_cli_interface.py  test_end_to_end.py
tests/integration/: __init__.py  test_agent_integration.py  test_database_operations.py  test_integration_workflows.py  test_supervisor_workflows.py
tests/performance/: __init__.py  test_langgraph_agents.py  test_performance.py
tests/unit/: __init__.py
tests/unit/agents/: __init__.py  test_coding_agent.py  test_documentation_agent.py  test_research_agent.py  test_testing_agent.py
tests/unit/config/: __init__.py  test_configuration.py  test_yaml_configuration.py
tests/unit/core/: test_agent_protocol.py  test_agent_registry.py  test_core_orchestrator.py  test_workflow_state.py
tests/unit/data/: test_data_transformations.py  test_database_schemas.py  test_task_calculations.py  test_unified_models.py
tests/unit/services/: __init__.py  test_repositories.py  test_task_manager.py  test_task_services.py
tests/utils/: __init__.py  agent_fixtures.py  factories.py  fixtures.py  utils.py
tests/utils/fixtures/: __init__.py  http_mocks.py
