[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-pro-agents"
version = "0.1.0"
description = "Professional multi-agent orchestration system with LangGraph supervisor, advanced task management, and library-first architecture"
authors = [{ name = "Bjorn Melin" }]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    # Core async and HTTP libraries
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",

    # LangChain ecosystem - latest versions
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.6",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.2",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-supervisor>=0.0.29",

    # AI/LLM providers
    "groq>=0.30.0",
    "openai>=1.98.0",

    # Data processing and validation
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",

    # CLI and UI
    "rich>=14.1.0",
    "typer>=0.16.0",

    # Configuration and environment
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.1",

    # Database and persistence
    # sqlite3 is built-in to Python
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.10.0"]

[project.urls]
Repository = "https://github.com/BjornMelin/dev-pro-agents"
Documentation = "https://github.com/BjornMelin/dev-pro-agents/docs"

[project.scripts]
dev-pro-agents = "src.cli:main"
supervisor = "src.supervisor:main"
task-manager = "src.task_manager:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]

[tool.ruff]
line-length = 88
target-version = "py312"
respect-gitignore = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # bugbear
    "S",    # security checks
    "C4",   # comprehensions
    "SIM",  # simplify
    "TC",   # type checking
    "ARG",  # unused arguments
    "PTH",  # pathlib
    "RUF"   # ruff-specific rules
]
ignore = [
    "S101",  # assert used in tests
    "S603",  # process creation
    "S607",  # shell function without shell=True
    "D203",  # one-line docstring conflicts with D211
    "D213",  # multi-line docstring summary
    "D107",  # missing docstring in __init__
    "D104",  # missing docstring in public modules
    "D100",  # missing docstring in public module
    "ARG002",# unused method argument
    "T201",  # print used
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR2004", # magic values
    "PLR0915"  # too many statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert used in tests
    "ARG001", # unused function argument
    "PLR2004",# magic values
    "D103",  # missing docstring
    "D102",  # missing docstring
    "D101"   # missing docstring
]
"tests/conftest.py" = [
    "F403",  # star imports
    "F401"   # unused imports
]
"tests/**/test_*.py" = [
    "S101",
    "PLR2004",
    "D103",
    "D102",
    "D101"
]
"src/cli.py" = ["T201"]
"src/supervisor.py" = ["PLR0915"]
"**/__init__.py" = ["D104"]
"src/**/__init__.py" = ["D104"]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]